# maniscope

./: .env.example  .gitignore  000_launch_app.sh  CHANGELOG.md  LICENSE  README-plan.md  README.md  REFACTORING_SUMMARY.md  REPO_STRUCTURE.md  TROUBLESHOOTING.md  USAGE.md  benchmark_comparison.py  pyproject.toml  readme-opencode.md  requirements.txt  run_app.py  setup.py
archive/: README.md
archive/code/: engine_old_backup.py  maniscope_engine_v0.py
archive/docs/: CLEANUP_SUMMARY.md  ENGINE_CONSOLIDATION.md  FINAL_REVIEW.md  MIGRATION_REVIEW.md  PROFESSIONAL_RENAME.md  REFACTORING_SUMMARY.md  REFACTORING_UI.md  TEST_RESULTS.md
data/: README.md  dataset-aorb-10.json  dataset-aorb.json  dataset-arguana-10.json  dataset-arguana.json  dataset-fever-10.json  dataset-fever.json  dataset-fiqa-10.json  dataset-fiqa.json  dataset-msmarco-10.json  dataset-msmarco.json  dataset-nfcorpus-10.json  dataset-scifact-10.json  dataset-scifact.json  dataset-trec-covid-10.json  dataset-trec-covid.json
data/custom/: maniscope-arxiv.json
demo/: basic_demo.py
docs/: CHANGELOG.md  GPU_ENABLEMENT_COMPLETE.md  GPU_REVERT_GUIDE.md  RAG_IMPLEMENTATION_SUMMARY.md  README-plan.md  REPO_STRUCTURE.md  eval-rag.md  readme-opencode.md
examples/: basic_usage.py  caching_demo.py
maniscope/: __init__.py  engine.py  maniscope_engine.py  maniscope_engine_optimized.py
scripts/: QUICK_TEST.sh  comprehensive_benchmark.py  verify_gpu.py
tests/: test_engine.py
ui/: Maniscope.py  __init__.py  config.py  test_e2e.py
ui/pages/: 00_⚙️_Configuration.py  01_📁_Data_Manager.py  02_🔬_Eval_ReRanker.py  03_🎯_Benchmark.py  03_🎯_Compare_ReRanker.py  04_🚀_Batch_Benchmark.py  0_⚙️_Configuration.py  1_🔬_Eval_ReRanker.py  2_🎯_Benchmark.py  3_📈_Analytics.py  3_🚀_Batch_Benchmark.py  4_📈_Analytics.py  4_🚀_Batch_Benchmark.py  6_⚙️_Configuration.py  7_⚡_Optimization.py  80_🔍_Grid_Search.py  8_🔍_Grid_Search.py  99_⚡_Optimization.py  9_📁_Data_Manager.py
ui/utils/: __init__.py  data_loader.py  grid_search.py  metrics.py  models.py  pdf_processor.py  v2o_profiler.py  visualization.py
